<?xml version="1.0"?>
<package format="2">
  <name>warthog_navigation</name>
  <version>1.0.0</version>
  <description>The warthog navigation package</description>

  <author email="felipemohr@ieee.org">Felipe Mohr</author>
  <maintainer email="felipemohr@ieee.org">Felipe Mohr</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/felipe18mohr/warthog_navigation</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>amcl</depend>
  <depend>gmapping</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <depend>navfn</depend>
  <depend>base_local_planner</depend>
  <depend>dwa_local_planner</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>octomap</depend>
  <depend>rtabmap</depend>
  <depend>rtabmap_ros</depend>
  
  <export>
  </export>
</package>
